use query parameter handle ownership filter on backend
